Added inventory (Beta)

--- a/AT02_CreepyPasta/Assembly-CSharp.csproj
+++ b/AT02_CreepyPasta/Assembly-CSharp.csproj
@@ -67,17 +67,19 @@
     <Compile Include="Assets\Scripts\Inventory.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Scripts\ItemObject.cs" />
-    <Compile Include="Assets\Scripts\ItemDatabase.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\BatteryPickup.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\World Interactions\DoorInteraction.cs" />
     <Compile Include="Assets\Scripts\Player\Footsteps.cs" />
     <Compile Include="Assets\Scripts\InteractonTextController.cs" />
+    <Compile Include="Assets\Scripts\InventorySlotUI.cs" />
     <Compile Include="Assets\Scripts\Item.cs" />
     <Compile Include="Assets\Scripts\World Interactions\EventTriggerCollider.cs" />
+    <Compile Include="Assets\Scripts\InventoryUI.cs" />
     <Compile Include="Assets\Scripts\GUIManager.cs" />
     <Compile Include="Assets\Scripts\Player\MouseLook.cs" />
+    <Compile Include="Assets\Scripts\DoorSoundsControls.cs" />
     <Compile Include="Assets\Scripts\UIfollowcamera.cs" />
     <Compile Include="Assets\Scripts\World Interactions\Interactable.cs" />
   </ItemGroup>
