--- a/AT02_CreepyPasta/Assembly-CSharp.csproj
+++ b/AT02_CreepyPasta/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
     <UnityVersion>2022.3.14f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.14f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.SourceGenerators.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.14f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
@@ -63,6 +64,7 @@
     <Compile Include="Assets\Scripts\World Interactions\ButtonInteraction.cs" />
     <Compile Include="Assets\Scripts\World Interactions\NoteInteraction.cs" />
     <Compile Include="Assets\Scripts\Player\Interaction.cs" />
+    <Compile Include="Assets\Scripts\BatteryUI.cs" />
     <Compile Include="Assets\Scripts\Inventory.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Scripts\ItemObject.cs" />
